syntax = "proto3";
package event;

import "github.com/gogo/protobuf/gogoproto/gogo.proto";
import "google/protobuf/timestamp.proto";

message Event {
  uint64 ID = 1;
  bytes previousMessageHash = 2;
  bytes aggregateID = 3;
  google.protobuf.Timestamp timestamp = 5
      [ (gogoproto.stdtime) = true, (gogoproto.nullable) = false ];
  bytes sourceID = 6;
  int32 sourceVersion = 7;

  int32 type = 8;
  bytes payload = 9;
}
